deploy/k8s/base/api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hcm-api
spec:
  replicas: 2
  selector:
    matchLabels:
      app: hcm-api
  template:
    metadata:
      labels:
        app: hcm-api
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/path: /api/v1/metrics
        prometheus.io/port: "3001"
    spec:
      automountServiceAccountToken: false
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: api
          image: ghcr.io/your-org/hr-hcm-api:v1.4.0
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3001
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            capabilities:
              drop:
                - ALL
          startupProbe:
            httpGet:
              path: /api/v1/health/live
              port: 3001
            failureThreshold: 30
            periodSeconds: 5
            timeoutSeconds: 3
          readinessProbe:
            httpGet:
              path: /api/v1/health/ready
              port: 3001
            initialDelaySeconds: 20
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 3
          livenessProbe:
            httpGet:
              path: /api/v1/health/live
              port: 3001
            initialDelaySeconds: 30
            periodSeconds: 20
            timeoutSeconds: 5
            failureThreshold: 3
          resources:
            requests:
              cpu: 250m
              memory: 512Mi
            limits:
              cpu: "1"
              memory: 1Gi
