deploy/k8s/base/api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hcm-api
spec:
  selector:
    app: hcm-api
  ports:
    - name: http
      port: 3001
      targetPort: 3001
