deploy/k8s/base/web-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hcm-web
spec:
  selector:
    app: hcm-web
  ports:
    - name: http
      port: 80
      targetPort: 8080
